# cpp-snippets

./: CMakeLists.txt  README.md  makefile  print_array.hpp  quick_demo.makefile
makefiles/: README.md  single_file.mk
src/snippets/: array_io.hpp  singly_linked_list.hpp
test/: array_io.cpp  doctest_dummy.cpp  doctest_main.cpp  singly_linked_list.cpp
